--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,10 +6,14 @@
 
 <div class="box">
   <% for (let i =0; i < newItemLists.length;  i++ ) { %>
-  <div class="item">
-    <input type="checkbox">
-    <p><%= newItemLists[i] %></p>
-  </div>
+  <form action="/delete" method="post">
+    <div class="item">
+      <input type="checkbox" name= "checkbox" value = "<%=newItemLists[i]._id%>" onChange="this.form.submit()">
+      <p><%= newItemLists[i].name %></p>
+    </div>
+    <input type="hidden" name="listTitle" value="<%= listTitle%>"></input>
+  </form>
+
   <% } %>
   <form action="/" method="post">
     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
